# ur5_dual_gesture_teleop

./: .gitignore  README.md  frames_2026-05-17_21.22.13.gv
.claude/: settings.json
src/dual_ur5_left_arm_ikfast_plugin/: CMakeLists.txt  dual_ur5_left_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/dual_ur5_left_arm_ikfast_plugin/src/: dual_ur5_left_arm_ikfast_moveit_plugin.cpp  dual_ur5_left_arm_ikfast_solver.cpp
src/dual_ur5_right_arm_ikfast_plugin/: CMakeLists.txt  dual_ur5_right_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/dual_ur5_right_arm_ikfast_plugin/src/: dual_ur5_right_arm_ikfast_moveit_plugin.cpp  dual_ur5_right_arm_ikfast_solver.cpp
src/ur5_dual_robot_bringup/: package.xml  setup.cfg  setup.py
src/ur5_dual_robot_bringup/launch/: bringup.launch.py  hand_tracking.launch.py  keyboard_teleop.launch.py
src/ur5_dual_robot_bringup/rviz/: dual_robot.rviz
src/ur5_dual_robot_description/: CMakeLists.txt  frames_2026-05-13_10.42.04.gv  package.xml
src/ur5_dual_robot_description/rviz/: dual_robot.rviz
src/ur5_dual_robot_description/urdf/: dual_ur5.urdf  dual_ur5.urdf.xacro
src/ur5_dual_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_dual_robot_moveit_config/config/: dual_ur5.ros2_control.xacro  dual_ur5.srdf  dual_ur5.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kinematics_analytical.yaml  left_servo_config.yaml  moveit_controllers.yaml  right_servo_config.yaml  (+1 more)
src/ur5_dual_robot_teleop/: package.xml  setup.cfg  setup.py
(+26 files in other folders)
